# java-rs

./: Cargo.toml  README.md
jfr-metadata-xml/: Cargo.toml
jfr-metadata-xml/src/: lib.rs  schema.rs
jfr-reader/: Cargo.toml  README.md
jfr-reader/benches/: read.rs
jfr-reader/src/: annotations.rs  chunk.rs  chunk_event.rs  common.rs  constant_pool.rs  error.rs  event.rs  lib.rs  metadata.rs  metadata_xml.rs  primitive.rs  recording.rs  resolver.rs  settings.rs  specification.rs  string_table.rs  value.rs
jfr-reader/src/types/: async_profiler.rs  mod.rs  openjdk17.rs  openjdk21.rs
jfr-reader/testdata/: intellij.jfr.zst
jvm-attach/: Cargo.toml  README.md
jvm-attach/src/: lib.rs
