[package]
name = "jfr-metadata-xml"
version = "0.1.0"
edition = "2021"
description = "Read Java Flight Recorder (JFR) metadata XML"
rust-version = "1.65"
license = "Apache-2.0 OR MIT"
keywords = ["java", "jfr", "jvm"]
homepage = "https://github.com/indygreg/java-rs"
repository = "https://github.com/indygreg/java-rs.git"
readme = "README.md"

[dependencies]
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
