[package]
name = "jfr-reader"
version = "0.1.0"
edition = "2021"
description = "Read Java Flight Recorder (JFR) recordings and their events"
rust-version = "1.65"
license = "Apache-2.0 OR MIT"
keywords = ["java", "jfr", "jvm"]
homepage = "https://github.com/indygreg/java-rs"
repository = "https://github.com/indygreg/java-rs.git"
readme = "README.md"

[[bin]]
name = "jfr-metadata-2-rs"
required-features = ["metadata-xml-derive"]

[[bench]]
name = "read"
harness = false

[dependencies]
bitflags = "^2.0"
chrono = "0.4.33"
convert_case = { version = "0.6.0", optional = true }
nom = "7.1.3"
num_enum = "0.7.2"
prettyplease = { version = "0.2.16", optional = true }
proc-macro2 = { version = "1.0.78", optional = true }
quote = { version = "1.0.35", optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
syn = { version = "2.0.48", features = ["full"], optional = true }
thiserror = "1.0.56"

[dependencies.jfr-metadata-xml]
path = "../jfr-metadata-xml"
version = "0.1.0"
optional = true

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
indoc = "2.0.4"
zstd = "0.13.0"

[features]
default = [
    "metadata-xml-derive",
    "openjdk17"
]
# Event types for OpenJDK 17.
openjdk17 = []

#Support for converting metadata.xml into Rust types.
metadata-xml-derive = [
    "convert_case",
    "jfr-metadata-xml",
    "proc-macro2",
    "prettyplease",
    "quote",
    "syn",
]
