[package]
name = "jvm-attach"
version = "0.1.0"
edition = "2021"
description = "Attach to JVMs and issue commands to them. i.e. jcmd in Rust"
rust-version = "1.65"
license = "Apache-2.0 OR MIT"
keywords = ["java", "jvm", "jcmd"]
homepage = "https://github.com/indygreg/java-rs"
repository = "https://github.com/indygreg/java-rs.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
thiserror = "1.0.44"
